<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xyzcorp</groupId>
	<artifactId>Q4Task</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Q4Task</name>

	<dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.4.0</version>
        </dependency>
        <dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-jvm-deps</artifactId>
            <version>1.0.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>1.2.4</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--Reporting libs-->
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>0.6.0</version>
        </dependency>

           <dependency>
               <groupId>com.googlecode.totallylazy</groupId>
               <artifactId>totallylazy</artifactId>
               <version>1.85</version>
           </dependency>



       </dependencies>

       <build>
           <plugins>
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-compiler-plugin</artifactId>
                   <version>3.3</version>
                   <configuration>
                       <source>1.8</source>
                       <target>1.8</target>
                   </configuration>
               </plugin>

               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <version>2.18.1</version>
                   <configuration>
                       <suiteXmlFiles>
                           <suiteXmlFile>testng.xml</suiteXmlFile>
                       </suiteXmlFiles>
                       <threadCount>10</threadCount>
                       <parallel>tests</parallel>
                       <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                   </configuration>
               </plugin>

               <plugin>
                   <groupId>net.masterthought</groupId>
                   <artifactId>maven-cucumber-reporting</artifactId>
                   <version>0.0.5</version>
                   <dependencies>
                       <dependency>
                           <groupId>com.googlecode.totallylazy</groupId>
                           <artifactId>totallylazy</artifactId>
                           <version>1.85</version>
                       </dependency>
                   </dependencies>
                   <executions>
                       <execution>
                           <id>execution</id>
                           <phase>verify</phase>
                           <goals>
                               <goal>generate</goal>
                           </goals>
                           <configuration>
                               <projectName>cucumber-jvm-example</projectName>
                               <outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
                               <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
                               <enableFlashCharts>false</enableFlashCharts>
                               <skippedFails>true</skippedFails>
                           </configuration>
                       </execution>
                   </executions>
               </plugin>

           </plugins>
       </build>

       <repositories>
           <repository>
               <id>sonatype-snapshots</id>
               <url>https://oss.sonatype.org/content/repositories/snapshots</url>
               <snapshots>
                   <enabled>true</enabled>
               </snapshots>
           </repository>

           <repository>
               <id>repo.bodar.com</id>
               <url>http://repo.bodar.com</url>
           </repository>

       </repositories>

   </project>